<resources>
    <string name="app_name">Stressy</string>
    <string name="channel_name">stressCollect</string>
    <string name="channel_description">스트레스 측정</string>
    <string name="zero">거의\n없었다\n0점</string>
    <string name="one">약간\n있었다\n1점</string>
    <string name="two">조금\n있었다\n2점</string>
    <string name="three">매우\n많았다\n3점</string>
    <string name="four">4점</string>
    <string name="tuto">스트레스 설문을 통해 스트레스 수치를 입력받습니다. <b>스마트폰 상태바에 알림이 뜨면</b> 설문을 진행해주시면 됩니다.</string>
    <string name="question">질문사항이 있으시다면?\n\n<b>2번</b> 스트레스 설문을 통해 스트레스 수치를 입력받습니다. <b>스마트폰 상태바에 알림이 뜨면</b> 설문을 진행해주시면 됩니다.</string>
    <string name="pref_previously_started">false</string>
    <string name="pref_previously_logined">null</string>
    <string name="pref_fcm_token">null</string>
    <string name="pref_sk_lambda">null</string>
    <string name="pref_sk_mu">null</string>
    <string name="pref_pk_n">null</string>
    <string name="pref_pk_g">null</string>
    <string name="pref_pk_nSquared">null</string>
    <string name="pref_user_email">null</string>

    <string name="stress_collect_count">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="worker_status">0.0</string>
    <string name="hint_email">ex) sejiwon@naver.com</string>
    <string name="error_email">이메일을 형식에 맞게 입력해주세요.</string>
    <string name="hint_password">ex)********</string>
    <string name="guide_password">비밀번호는 영문자, 숫자, 특수문자를 포함한\n8자리 이상 15자리 이하의 문자열이여야 합니다.</string>
    <string name="guide_password2">비밀번호와 비밀번호 확인이 다릅니다.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="check_original_pw">사용자 확인을 위해\n비밀번호를 한번 더 입력해주세요</string>
    <string name="check_withdraw">정말 탈퇴하시겠습니까?</string>
    <string name="did_you_sign_up">아직 회원가입을 하지 않으셨나요?</string>
    <string name="ask_logout">로그아웃 하시겠습니까?</string>

    <string-array name="graph_description">
        <item>낮음</item>
        <item>보통</item>
        <item>높음</item>
        <item>매우\n높음</item>
    </string-array>
</resources>