<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:foregroundGravity="center"
    android:background="@android:color/transparent"
    tools:context=".activity.WithdrawDialog">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/questions"
            android:layout_marginTop="10dp"
            android:text="@string/check_withdraw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
        <TextView
            style="@style/questions"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:text="@string/check_original_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />
        <TextView
            style="@style/questions"
            android:layout_marginTop="10dp"
            android:text="비밀번호"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            />
        <EditText
            style="@style/EditText"
            android:background="@android:color/transparent"
            android:id="@+id/editText_check_pw"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <View
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/colorPrimary" />

        <TextView
            style="@style/questions"
            android:id="@+id/guide_password"
            android:layout_marginTop="10dp"
            android:text="@string/guide_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textColor="#EF5388"
            android:visibility="gone"
            />

    </LinearLayout>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/button_withdraw_dialog"
        style="@style/nextButton"
        android:layout_gravity="bottom"
        android:text="탈퇴하기"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold" />
</FrameLayout>