<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:text="로그인" />
        <LinearLayout
            android:layout_gravity="right"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/questions"
                android:layout_marginTop="100dp"
                android:text="이메일"
                android:textSize="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                />
            <EditText
                style="@style/EditText"
                android:background="@android:color/transparent"
                android:id="@+id/login_email"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/colorPrimary" />


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="22dp"
                style="@style/questions"
                android:layout_marginTop="10dp"
                android:text="비밀번호"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                />
            <EditText
                style="@style/EditText"
                android:background="@android:color/transparent"
                android:id="@+id/login_password"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <View
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/colorPrimary" />

            <TextView
                style="@style/questions"
                android:id="@+id/guide_password"
                android:layout_marginTop="10dp"
                android:text="@string/guide_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:textColor="#EF5388"
                android:visibility="gone"
                />



        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_autologin"
            style="@style/questions"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="자동 로그인"
            android:textSize="18dp" />



    </LinearLayout>
    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/EditText"
            android:text="@string/did_you_sign_up"
            android:layout_width="0dp"
            android:layout_weight="3.5"
            android:layout_height="wrap_content"
            />
        <TextView
            style="@style/EditText"
            android:id="@+id/button_signup_onlogin"
            android:text="넹"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <Button
        android:id="@+id/button_login"
        style="@style/nextButton"
        android:text="로그인 하기"
        />
</LinearLayout>


</FrameLayout>