<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:foregroundGravity="center"
    android:background="@android:color/transparent"
    tools:context=".activity.StressCollectDialog">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:text="스트레스 설문"
        android:textColor="#000000"
        android:textSize="22dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="3dp"
        android:text="질문에 응답해주세요"
        android:textColor="#000000"
        android:textSize="18dp" />

        <LinearLayout
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:textSize="40dp"
                android:textColor="#2463b6"
                android:lineSpacingExtra="9sp"
                android:text="Q."
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="#000000"
                android:lineSpacingExtra="8sp"
                android:text="오늘의 스트레스는 어느정도 였나요?
"
                />

            <RadioGroup
                android:id="@+id/stressRadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginVertical="20dp"
                android:gravity="top"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radioButton"
                    style="@style/RadioWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:textSize="15dp" />

                <View
                    style="@style/ViewSurvey"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginVertical="5dp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/RadioWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/one"
                    android:textSize="15dp" />

                <View
                    android:id="@+id/view2"
                    style="@style/ViewSurvey"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginVertical="5dp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    style="@style/RadioWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/two"
                    android:textSize="15dp" />

                <View
                    android:id="@+id/view3"
                    style="@style/ViewSurvey"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginVertical="5dp" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    style="@style/RadioWithTextOnTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="@string/three"
                    android:textSize="15dp" />


            </RadioGroup>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/stressFinishBtn"
        style="@style/nextButton"
        android:layout_gravity="bottom"
        android:text="완료"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold" />

</FrameLayout>